--- a/index.html
+++ b/index.html
@@ -14,16 +14,20 @@
       rel="stylesheet" />
   </head>
   <body>
-    <div class="flex gap-1">
-      <a href="#" class="btn btn-sm">Label</a>
-      <span href="#" class="btn btn-md">Label</span>
-      <button class="btn btn-lg">Label</button>
-    </div>
+    <header>
+      <div class="container py-base">
+        <nav class="flex items-center gap-1.5">
+          <a href="#">
+            <img src="assets/logo.svg" alt="Logo da Zingen" />
+          </a>
 
-    <div class="flex gap-1">
-      <a aria-label="Label" href="#" class="btn btn-sm"></a>
-      <span aria-label="Label" href="#" class="btn btn-md"></span>
-      <button aria-label="Label" class="btn btn-lg"></button>
-    </div>
+          <a href="#about" class="desktop-only">Conheça o app</a>
+          <a href="#features" class="desktop-only">Funcionalidades</a>
+          <a href="#price" class="desktop-only">Planos e preços</a>
+
+          <a href="#dowload" class="btn btn-sm">Baixar agora</a>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
